--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <title>The Local Bae</title>
+    <title>The Local Bar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -31,8 +31,8 @@
       <!-- load components -->
       <script src="/src/App.js" defer type="text/babel"></script>
       <script src="/src/index.js" defer type="text/babel"></script>
-      <script src="/src/components/navigation.js" defer type="text/babel"></script>
-      <script src="/src/components/home.js" defer type="text/babel"></script>
+      <script src="/src/sitemap-generator.js" defer type="text/babel"></script>
+      <script src="/src/sitemap-router.js" defer type="text/babel"></script>
       <script src="https://apis.google.com/js/api.js" type="text/JavaScript"></script>
 
       
