--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created using create-react-app by Amanda Cogar."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Picture1.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -40,9 +40,9 @@
       <!-- load components -->
       <script src="/src/App.js" defer type="text/babel"></script>
       <script src="/src/index.js" defer type="text/babel"></script>
-      <script src="/src/sitemap-generator.js" defer type="text/babel"></script>
-      <script src="/src/sitemap-router.js" defer type="text/babel"></script>
-      <script src="https://apis.google.com/js/api.js" type="text/JavaScript"></script>
+      <script async src="/src/sitemap-generator.js" defer type="text/babel"></script>
+      <script async src="/src/sitemap-router.js" defer type="text/babel"></script>
+      <script async src="https://apis.google.com/js/api.js" type="text/JavaScript"></script>
 
       
   </body>
